fix : makefile 실행 오류 수정

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,10 +6,8 @@ SRCS		=	ft_bzero.c \
 				ft_putendl_fd.c \
 				ft_strlen.c \
 				ft_calloc.c \
-				ft_split.c \
-				ft_stncmp.c \
-				is_space.c \
-				is_digit.c \
+				ft_strncmp.c \
+				ft_isdigit.c \
 				ft_atoll.c
 
 OBJS = ${SRCS:.c=.o}
